--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ ObjCARC/
 Scalar/
 Utils/
 Vectorize/
-micro_benchmarks/pthread_create/*.ll
-micro_benchmarks/pthread_create/*.bc
-micro_benchmarks/pthread_create/*.opt
+*.ll
+*.bc
+*.opt
