--- a/micro_benchmarks/simple_tester/Makefile
+++ b/micro_benchmarks/simple_tester/Makefile
@@ -1,7 +1,13 @@
 all: build emit
 
+debug: build_debug emit
+
 build: simple_tester.cpp
 	clang++ simple_tester.cpp -o simple_tester
+
+build_debug: simple_tester.cpp
+	clang++ simple_tester.cpp -o simple_tester -g
+
 
 emit: simple_tester.cpp
 	clang++ -O0 -emit-llvm simple_tester.cpp -c -o simple_tester.bc
